Add screenshots, misc UI fixes.

--- a/src/malla/templates/base.html
+++ b/src/malla/templates/base.html
@@ -198,10 +198,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <small>{{ APP_NAME }}</small>
-                </div>
-                <div class="col-md-6 text-md-end">
-                    <small>Database: {{ DATABASE_FILE if DATABASE_FILE else 'meshtastic_history.db' }}</small>
+                    <small>Powered by <a href="https://github.com/zenitraM/malla">Malla</a></small>
                 </div>
             </div>
         </div>
